# sam2-remote-interface

./: .gitignore  CMakeLists.txt  DataEngine  README.md  api.py  co_tracker.py  masker_manager.py  model_manager.py  requirements.txt  sam2_image_masker.py  sam2_video_masker.py  tester.py  utils.py
.github/: copilot-instructions.md
backend/: api.py  sam2_video_masker.py  tester.py
backend/models/: sam2_video_masker.py
backend/tests/: tester.py
frontend-ng/data-engine/: README.md  angular.json  package-lock.json  package.json
frontend-ng/data-engine/src/: index.html  styles.css
frontend-ng/data-engine/src/app/: app.routes.ts  app.spec.ts  app.ts
frontend-ng/data-engine/src/app/services/: backend.service.ts
frontend-ng/data-engine/src/app/video-masker/: video-masker.component.css  video-masker.component.html  video-masker.component.ts
include/: backend_interface.hpp
src/: CMakeLists.txt  backend_interface.cpp  main.cpp  tests.cpp
